--- a/src/css/Login.module.css
+++ b/src/css/Login.module.css
@@ -32,7 +32,7 @@
   align-self: stretch;
   flex: 1;
   border-radius: 6px;
-  border: 2px solid #224a99;
+  border: 2px solid rgba(121, 121, 121, 0.6);
   display: flex;
   flex-direction: column;
   align-items: flex-start;
