[style] 로그인/로그아웃 버튼 스타일 반영 (kan-18)

--- a/src/css/Header.module.css
+++ b/src/css/Header.module.css
@@ -5,8 +5,13 @@
 }
 .text {
   position: relative;
+  font-size: 21px;
   line-height: 150%;
   font-weight: 500;
+  font-family: "Noto Sans CJK KR";
+  color: #4f4f4f;
+  text-align: center;
+  text-decoration: none;
 }
 .tab {
   width: 110px;
