[style] 챗봇 서치 버튼svg파일 적용 (kan-38)

--- a/src/css/Home.module.css
+++ b/src/css/Home.module.css
@@ -226,6 +226,9 @@ body {
   width: 44px;
   position: relative;
   height: 48px;
+  background: none;
+  border: none;
+  cursor: pointer;
 }
 .parent11 {
   align-self: stretch;
