[style] 챗봇사전작업-레이아웃정리 (kan-38) 챗봇영역 parent10 -> chatbotContainer
챗봇제외 컨텐츠영역 contentContainer

실시간채용정보영역
realtimeJobInfoContainer

실실시간채용정보문구
div34 -> areaLabel

실시간채용정보 컨텐츠영역
frameParent -> realtimeJobInfoContent

교육정보영역
eduInfoContainer
교육정보 문구
div35 -> areaLabel
교육정보 컨텐츠영역
homeInner -> eduInfoContent

커뮤니티영역
communityContainer
커뮤니티 문구
div33 -> areaLabel
커뮾니티 영역
homeChild -> communityContent

--- a/src/css/Home.module.css
+++ b/src/css/Home.module.css
@@ -34,9 +34,8 @@ body {
   mix-blend-mode: darken;
 }
 .frameGroup {
-  position: absolute;
-  top: 0px;
-  left: 0px;
+  position: relative;
+  background-color: red;
   border-radius: 12px;
   background-color: rgba(255, 255, 255, 0.75);
   border: 2px rgba(208, 208, 208, 0.5);
@@ -104,16 +103,15 @@ body {
   object-fit: cover;
   mix-blend-mode: darken;
 }
-.frameParent1 {
-  position: absolute;
-  top: 212px;
-  left: 323px;
+.realtimeJobInfoContent {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
   border-radius: 12px;
-  background-color: rgba(255, 255, 255, 0.75);
-  border: 2px rgba(208, 208, 208, 0.5);
   box-sizing: border-box;
-  width: 311px;
-  height: 200px;
+  width: 634px;
+  height: 412px;
 }
 .frameParent {
   position: absolute;
@@ -133,10 +131,8 @@ body {
   justify-content: flex-start;
   gap: 27px;
 }
-.homeInner {
-  position: absolute;
-  top: 584px;
-  left: 966px;
+.eduInfoContent {
+  position: relative;
   border-radius: 12px;
   background-color: rgba(255, 255, 255, 0.75);
   border: 2px rgba(208, 208, 208, 0.5);
@@ -167,10 +163,8 @@ body {
   justify-content: flex-start;
   gap: 27px;
 }
-.homeChild {
-  position: absolute;
-  top: 584px;
-  left: 1289px;
+.communityContent {
+  position: relative;
   border-radius: 12px;
   background-color: rgba(255, 255, 255, 0.75);
   border: 2px rgba(208, 208, 208, 0.5);
@@ -178,32 +172,12 @@ body {
   width: 311px;
   height: 412px;
 }
-.div33 {
-  position: absolute;
-  top: 537px;
-  right: 564px;
+.areaLabel {
+  position: relative;
+  margin-bottom: 10px;
   line-height: 150%;
   font-weight: 500;
   color: #111e32;
-  text-align: center;
-}
-.div34 {
-  position: absolute;
-  top: 537px;
-  left: 322px;
-  line-height: 150%;
-  font-weight: 500;
-  color: #111e32;
-  text-align: center;
-}
-.div35 {
-  position: absolute;
-  top: 537px;
-  right: 883px;
-  line-height: 150%;
-  font-weight: 500;
-  color: #111e32;
-  text-align: center;
 }
 .p {
   margin: 0;
@@ -242,10 +216,11 @@ body {
   text-align: center;
   font-size: 21px;
 }
-.parent10 {
-  position: absolute;
-  top: 227px;
-  left: 643px;
+.chatbotContainer {
+  position: relative;
+  margin: 0 auto;
+  margin-top: 117px;
+  display: flex;
   width: 634px;
   display: flex;
   flex-direction: column;
@@ -255,54 +230,27 @@ body {
   font-size: 40px;
   color: #c4c4c4;
 }
-.logoIcon {
-  width: 180px;
+
+.contentContainer {
   position: relative;
-  height: 100px;
-}
-.text {
-  position: relative;
-  line-height: 150%;
-  font-weight: 500;
-}
-.tab {
-  width: 110px;
-  background-color: #fff;
-  height: 100px;
+  margin: 0 auto;
+  margin-top: 150px;
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
+  gap: 10px;
+  width: 1300px;
+  height: 450px;
 }
-.tabParent {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-start;
-  gap: 40px;
+
+.realtimeJobInfoContainer {
+  width: 634px;
 }
-.logoParent {
-  width: 1280px;
-  height: 100px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
+
+.eduInfoContainer {
+  width: 311;
 }
-.gnb {
-  position: absolute;
-  top: 0px;
-  left: calc(50% - 960px);
-  background-color: #fff;
-  width: 1920px;
-  height: 100px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  font-size: 21px;
-  color: #4f4f4f;
+
+.communityContainer {
+  width: 311;
 }
 .home {
   width: 100%;
