--- a/src/css/Home.module.css
+++ b/src/css/Home.module.css
@@ -222,10 +222,10 @@ body {
   margin-top: 117px;
   display: flex;
   width: 634px;
+  height: 184px;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
+  justify-content: center;
   gap: 40px;
   font-size: 40px;
   color: #c4c4c4;
@@ -239,6 +239,20 @@ body {
   gap: 10px;
   width: 1300px;
   height: 450px;
+  transition: margin-top 1s ease-in-out; /* margin-top 변경 시 애니메이션 적용 */
+}
+
+.animateChatbotContainer {
+  animation: increaseChatbotContainer 0.5s forwards;
+}
+
+@keyframes increaseChatbotContainer {
+  from {
+    height: 184px;
+  }
+  to {
+    height: 740px;
+  }
 }
 
 .realtimeJobInfoContainer {
