[style] inputbox 경계, 아웃라인정리 (kan-38)

--- a/src/css/Home.module.css
+++ b/src/css/Home.module.css
@@ -193,6 +193,9 @@ body {
 }
 .div37 {
   position: relative;
+  width: 100%;
+  border: none;
+  outline: none;
   letter-spacing: 0.02em;
   line-height: 150%;
 }
