[feat] 셀렉트박스 클릭 시 로그인페이지로 이동 (kan-39)

--- a/src/css/LoginSelectPage.module.css
+++ b/src/css/LoginSelectPage.module.css
@@ -13,16 +13,18 @@
   font-weight: 700;
   line-height: 36px;
   text-align: center;
+  color: white;
 }
 
 .a {
   position: relative;
-  color: black;
+  color: white;
   font-family: Noto Sans CJK KR;
   font-size: 24px;
   font-weight: 700;
   line-height: 36px;
   text-align: center;
+  color: black;
 }
 
 .frameChild {
@@ -45,6 +47,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  cursor: pointer;
 }
 .diversity15Parent {
   position: relative;
