--- a/src/css/ApplyActivity.module.css
+++ b/src/css/ApplyActivity.module.css
@@ -1,8 +1,3 @@
-.logoIcon {
-  width: 180px;
-  position: relative;
-  height: 100px;
-}
 .text {
   position: relative;
   line-height: 150%;
@@ -17,11 +12,11 @@
   align-items: center;
   justify-content: center;
 }
-.text3 {
+.text1 {
   position: relative;
   line-height: 150%;
 }
-.tab3 {
+.tab1 {
   width: 110px;
   background-color: #fff;
   height: 100px;
@@ -45,6 +40,26 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+}
+
+.text7 {
+  position: absolute;
+  width: 100%;
+  top: 0%;
+  left: 0%;
+  line-height: 150%;
+  display: inline-block;
+}
+.text6 {
+  width: 130px;
+  position: relative;
+  height: 27px;
+}
+.text8 {
+  width: 130px;
+  position: relative;
+  height: 27px;
+  color: #224a99;
 }
 
 .div1 {
@@ -89,7 +104,7 @@
   text-transform: uppercase;
   font-weight: 500;
 }
-.horizontalContainer4 {
+.horizontalContainer3 {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -108,105 +123,194 @@
   color: #224a99;
   font-family: Roboto;
 }
+.buttonContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 24px;
+}
 .textInput {
+  width: 0px;
+  position: relative;
+  height: 24px;
+  z-index: 0;
+}
+.label {
+  flex: 1;
+  position: relative;
+  letter-spacing: 0.15px;
+  line-height: 24px;
+  z-index: 1;
+}
+.textInput1 {
+  width: 24px;
+  position: relative;
+  height: 0px;
+  z-index: 2;
+}
+.arrowdropdownfilledIcon {
+  width: 24px;
+  position: absolute;
+  margin: 0 !important;
+  top: calc(50% - 12px);
+  right: 0px;
+  height: 24px;
+  overflow: hidden;
+  flex-shrink: 0;
+  z-index: 3;
+}
+.horizontalContainer4 {
   align-self: stretch;
+  overflow: hidden;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
-  padding: 0px 16px;
-  gap: 24px;
+  padding: 8px 0px;
+  position: relative;
 }
-.button5 {
+.button4 {
+  align-self: stretch;
+  border-radius: 4px;
+  border: 1px solid #c5c5c5;
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
   justify-content: flex-start;
+  padding: 0px 12px;
 }
-.container {
+.select {
+  width: 160px;
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
   justify-content: flex-start;
-  gap: 24px;
+  font-size: 16px;
 }
-.horizontalContainer6 {
+.horizontalContainer2 {
   align-self: stretch;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  padding: 0px 40px 0px 16px;
+  padding: 0px 0px 0px 16px;
+}
+.button6 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+}
+.paragraphContainer {
+  align-self: stretch;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 24px;
+  text-align: center;
+  font-size: 18px;
+}
+.textInput2 {
+  width: 380px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 12px;
+  text-align: left;
+  font-size: 21px;
+}
+.segmentedPicker {
+  width: 362px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 80px;
+  text-align: left;
+  font-size: 21px;
+}
+.horizontalContainer6 {
+  align-self: stretch;
+  height: 71px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0px 0px 0px 16px;
+  box-sizing: border-box;
+}
+.label2 {
+  flex: 1;
+  position: relative;
+  letter-spacing: 0.15px;
+  line-height: 24px;
+}
+.textInputContainer1 {
+  align-self: stretch;
+  overflow: hidden;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 8px 0px;
+  box-sizing: border-box;
+  min-height: 24px;
+}
+.textInputContainer {
+  align-self: stretch;
+  border-radius: 4px;
+  border: 1px solid rgba(0, 0, 0, 0.23);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  padding: 0px 12px;
+}
+.textfield {
+  width: 866px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+.btn {
+  width: 160px;
+  border-radius: 6px;
+  background-color: #fff;
+  border: 1px solid #9b9b9b;
+  box-sizing: border-box;
+  height: 40px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 12px 0px;
+  text-align: center;
+  font-size: 18px;
+  color: #224a99;
+}
+.textfieldParent {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 32px;
+  text-align: left;
+  font-size: 16px;
+  color: rgba(0, 0, 0, 0.38);
 }
 .horizontalContainer5 {
   align-self: stretch;
-  height: 71px;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-  text-align: center;
-}
-.horizontalContainer3 {
-  align-self: stretch;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  align-items: flex-end;
   justify-content: flex-start;
-  gap: 16px;
+  gap: 32px;
 }
-.component3 {
-  border-bottom: 2px solid #224a99;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  padding: 10px;
-  color: #224a99;
-}
-.component2 {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  padding: 10px;
-}
-.component3Parent {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-start;
-  font-size: 16px;
-}
-.icLikeIcon {
-  width: 24px;
-  position: relative;
-  height: 24px;
-}
-.button11 {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-start;
-  gap: 12px;
-}
-.container3 {
-  align-self: stretch;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-start;
-  padding: 0px 40px 0px 16px;
-}
-.container2 {
-  align-self: stretch;
-  height: 71px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-}
-.verticalContainer2 {
+.table {
   align-self: stretch;
   display: flex;
   flex-direction: column;
@@ -215,7 +319,7 @@
   gap: 24px;
   text-align: center;
 }
-.verticalContainer {
+.tableContainer1 {
   align-self: stretch;
   display: flex;
   flex-direction: column;
@@ -223,7 +327,7 @@
   justify-content: flex-start;
   gap: 24px;
 }
-.contents {
+.tableContainer {
   position: absolute;
   top: 40px;
   left: 60px;
@@ -232,42 +336,16 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  gap: 101px;
+  gap: 24px;
 }
-.text10 {
-  position: absolute;
-  width: 100%;
-  top: 0%;
-  left: 0%;
-  line-height: 150%;
-  display: inline-block;
-}
-.text9 {
-  width: 130px;
-  position: relative;
-  height: 27px;
-  color: #224a99;
-}
-.text11 {
-  width: 130px;
-  position: relative;
-  height: 27px;
-}
-
 .div {
   width: 100%;
   position: relative;
   background-color: #fff;
   height: 1080px;
-
+  overflow: hidden;
   text-align: left;
   font-size: 18px;
   color: #000;
   font-family: "Noto Sans CJK KR";
-}
-
-.contentContainer {
-  display: flex;
-  flex-direction: row;
-  align-items: start;
 }
