--- a/src/css/Education.module.css
+++ b/src/css/Education.module.css
@@ -37,6 +37,7 @@
   align-items: flex-start;
   justify-content: center;
   gap: 12px;
+  cursor: pointer;
 }
 .frameItem {
   width: 400px;
@@ -95,4 +96,81 @@
   display: flex;
   flex-direction: row;
   align-items: start;
+}
+
+.modalBackground {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.modalPassBtn {
+  width: 40px;
+  position: relative;
+  height: 40px;
+  object-fit: contain;
+}
+
+.cardContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 24px;
+}
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 24px;
+}
+.modalContentContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 24px;
+}
+.cancelIcon {
+  width: 40px;
+  position: relative;
+  height: 40px;
+  cursor: pointer;
+}
+.modalContainer {
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: center;
+  text-align: center;
+  font-size: 24px;
+  color: #fff;
+  font-family: "Noto Sans CJK KR";
+}
+
+.modalLabel {
+  position: relative;
+  font-size: 24px;
+  line-height: 150%;
+  font-weight: 500;
+  font-family: "Noto Sans CJK KR";
+  color: #fff;
+  text-align: center;
 }
