--- a/src/css/Education.module.css
+++ b/src/css/Education.module.css
@@ -175,3 +175,13 @@
   color: #fff;
   text-align: center;
 }
+
+.modalContentImg {
+  width: 600px;
+  position: relative;
+  border-radius: 12px;
+  height: 600px;
+  overflow: hidden;
+  flex-shrink: 0;
+  object-fit: cover;
+}
