--- a/src/css/Login.module.css
+++ b/src/css/Login.module.css
@@ -1,7 +1,5 @@
 .div1 {
-  position: absolute;
-  top: calc(50% - 244.5px);
-  left: calc(50% - 33px);
+  position: relative;
   font-size: 24px;
   line-height: 150%;
   font-weight: 500;
