[feat] 홈 화면 교육 정보 데이터 맵핑 (kan-17)
Motivation:
- 교육 정보 api 호출하여 홈 화면에 맵핑
- 채용정보, 교육정보 클릭 시 페이지 이동
- 텍스트 길이가 width 보다 길 경우 ... 처리

Modification:
- 'Home.tsx' 수정
- 'Home.module.css' 수정

--- a/src/css/Home.module.css
+++ b/src/css/Home.module.css
@@ -12,12 +12,26 @@ body {
   font-size: 18px;
   line-height: 150%;
   font-weight: 500;
+  overflow: hidden; /* 내용을 잘라내기 위해 overflow 설정 */
+  white-space: nowrap; /* 줄바꿈 방지 */
+  text-overflow: ellipsis; /* 초과된 텍스트에 '...' 표시 */
+  width: 100%;
+}
+.div2 {
+  position: relative;
+  font-size: 18px;
+  line-height: 150%;
+  font-weight: 500;
+  overflow: hidden; /* 내용을 잘라내기 위해 overflow 설정 */
+  white-space: nowrap; /* 줄바꿈 방지 */
+  text-overflow: ellipsis; /* 초과된 텍스트에 '...' 표시 */
+  width: 100%;
 }
 .parent {
   position: absolute;
   top: 89px;
   left: 30px;
-  width: 186px;
+  width: 251px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -27,10 +41,10 @@ body {
 .image48Icon {
   position: absolute;
   top: calc(50% - 67px);
-  left: calc(50% - 111.5px);
+  left: calc(45% - 111.5px);
   width: 111px;
   height: 36px;
-  object-fit: cover;
+  object-fit: contain;
   mix-blend-mode: darken;
 }
 .frameGroup {
@@ -42,7 +56,6 @@ body {
   box-sizing: border-box;
   width: 311px;
   height: 200px;
-  white-space: nowrap;
 }
 .group {
   position: absolute;
@@ -131,6 +144,7 @@ body {
   align-items: flex-start;
   justify-content: flex-start;
   gap: 27px;
+  width: 251px;
 }
 .eduInfoContent {
   position: relative;
