--- a/src/css/ApplyActivity.module.css
+++ b/src/css/ApplyActivity.module.css
@@ -1,3 +1,8 @@
+.logoIcon {
+  width: 180px;
+  position: relative;
+  height: 100px;
+}
 .text {
   position: relative;
   line-height: 150%;
@@ -130,7 +135,7 @@
   justify-content: flex-start;
   gap: 24px;
 }
-.textInput {
+.minHeight {
   width: 0px;
   position: relative;
   height: 24px;
@@ -143,7 +148,7 @@
   line-height: 24px;
   z-index: 1;
 }
-.textInput1 {
+.minWidth {
   width: 24px;
   position: relative;
   height: 0px;
@@ -160,7 +165,7 @@
   flex-shrink: 0;
   z-index: 3;
 }
-.horizontalContainer4 {
+.container {
   align-self: stretch;
   overflow: hidden;
   display: flex;
@@ -170,10 +175,10 @@
   padding: 8px 0px;
   position: relative;
 }
-.button4 {
+.input {
   align-self: stretch;
   border-radius: 4px;
-  border: 1px solid #c5c5c5;
+  border: 1px solid rgba(0, 0, 0, 0.23);
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -187,6 +192,8 @@
   align-items: flex-start;
   justify-content: flex-start;
   font-size: 16px;
+  color: rgba(0, 0, 0, 0.6);
+  font-family: Roboto;
 }
 .horizontalContainer2 {
   align-self: stretch;
@@ -196,7 +203,7 @@
   justify-content: space-between;
   padding: 0px 0px 0px 16px;
 }
-.button6 {
+.button5 {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -212,7 +219,7 @@
   text-align: center;
   font-size: 18px;
 }
-.textInput2 {
+.textInput {
   width: 380px;
   display: flex;
   flex-direction: column;
@@ -232,7 +239,7 @@
   text-align: left;
   font-size: 21px;
 }
-.horizontalContainer6 {
+.horizontalContainer5 {
   align-self: stretch;
   height: 71px;
   display: flex;
@@ -258,16 +265,6 @@
   padding: 8px 0px;
   box-sizing: border-box;
   min-height: 24px;
-}
-.textInputContainer {
-  align-self: stretch;
-  border-radius: 4px;
-  border: 1px solid rgba(0, 0, 0, 0.23);
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  padding: 0px 12px;
 }
 .textfield {
   width: 866px;
@@ -302,7 +299,7 @@
   font-size: 16px;
   color: rgba(0, 0, 0, 0.38);
 }
-.horizontalContainer5 {
+.horizontalContainer4 {
   align-self: stretch;
   display: flex;
   flex-direction: column;
@@ -316,7 +313,6 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  gap: 24px;
   text-align: center;
 }
 .tableContainer1 {
