--- a/src/css/Login.module.css
+++ b/src/css/Login.module.css
@@ -106,6 +106,7 @@
   padding: 12px 60px;
   box-sizing: border-box;
   color: rgba(255, 255, 255, 0.5);
+  cursor: pointer;
 }
 .btn1 {
   position: absolute;
@@ -123,6 +124,7 @@
   justify-content: center;
   padding: 12px 60px;
   color: #224a99;
+  cursor: pointer;
 }
 .div4 {
   position: relative;
